# GetPocket.rs

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml  rust.yml
examples/: add.rs  list.rs  modify.rs
src/: client.rs  lib.rs  request.rs
src/ext/: adding.rs  bulk.rs  list.rs  mod.rs  modifying.rs  retrieving.rs  tags.rs
tests/: list_tests.rs  test_helper.rs  tests.rs
