[package]
name = "getpocket"
version = "0.2.3"
edition = "2021"
description = "Rust API for https://getpocket.com/"
license = "AGPL-3.0-only"
exclude = [
    ".gitignore",
]

[features]
default = []
unstable = []

[dependencies]
anyhow = "1"
async-trait = "0.1.68"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "add"
path = "examples/add.rs"

[[example]]
name = "modify"
path = "examples/modify.rs"

[dev-dependencies]
rocksdb = "0.19"
webbrowser = "0.8.3"
lazy_static = "1.4.0"
